...
    <string name="enterHeight"> Enter your height (inches) </string>
    <string name="enterStepGoal"> Enter your step goal</string>
    <string name="strideLength">Your stride length is: 123</string>
    <string name="stepCount">Step count: 123</string>
    <string name="signIn">Sign in</string>
    <string name="main">Main</string>
    <string name="updateSteps">update steps</string>
    <string name="stepsShown">steps will be shown here</string>
    <string name="startWalkRunButton">Start Walk/Run</string>
    <string name="timer">00:00:00</string>
    <string name="mph">mph</string>
    <string name="steps">steps</string>
    <string name="stopWalkRunButton">Stop Walk/Run</string>
    <string name="updateStep">update steps</string>
    <string name="liveSteps">Your Live Daily Step Count</string>
    <string name="Day">Day</string>
    <string name="Time">Time</string>
    <string name="Steps">Steps</string>
    <string name="MPH">MPH</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
...
